package eCourse.repositories;

import eCourse.domain.GradeOfExam;
import eapli.framework.domain.repositories.DomainRepository;

public interface GradesRepository extends DomainRepository<Long, GradeOfExam> {

}
